--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "npx prisma generate",
     "prebuild": "npm run db:generate",
     "dev": "next dev --port 4000",
     "dev:ws": "node server.js",
