--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.3.2",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
