--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
         "dotenv": "^17.2.3",
         "framer-motion": "^11.18.2",
         "jsonwebtoken": "^9.0.2",
+        "jspdf": "^3.0.3",
         "jszip": "^3.10.1",
         "lucide-react": "^0.408.0",
         "multer": "^2.0.2",
