feat: 添加自动化数据库迁移脚本并完成Agent预算系统迁移
✨ 新功能:
- 新增 scripts/migrate-agent-budget.js 自动化迁移脚本
- 添加 npm run db:migrate:agent-budget 命令
- 自动创建 agent_budgets、agent_usage_logs、agent_usage_stats 表
- 自动初始化5个竞价Agent的今日预算（每个2000）

🎯 迁移结果:
✅ agent_budgets 表创建成功
✅ agent_usage_logs 表创建成功
✅ agent_usage_stats 表创建成功
✅ 5个Agent今日预算初始化完成
✅ 数据库索引和约束全部设置完毕

📊 预算状态:
- tech-pioneer-alex: 2000/2000 (剩余/总额)
- business-guru-beta: 2000/2000
- innovation-mentor-charlie: 2000/2000
- market-insight-delta: 2000/2000
- investment-advisor-ivan: 2000/2000

🚀 系统现已全面切换到数据库预算管理！

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "db:studio": "npx prisma studio",
         "db:reset": "npx prisma db push --force-reset",
         "db:migrate": "npx prisma migrate dev",
+        "db:migrate:agent-budget": "node scripts/migrate-agent-budget.js",
         "setup:local": "npm run db:generate && npm run db:push",
         "health": "curl -s http://localhost:4000/api/health/simple | jq .",
         "health:full": "curl -s http://localhost:4000/api/health | jq .",
